- bugfixes no cadastro de blog (password undefined) e cadastro de feed (radio option unchecked)

HORAS TRABALHADAS: 7h

==========
05/06/2009
==========

- remocao do recurso "importar feeds"
- correcoes na exibicao de mensagens no cadastro de blogs / feeds
- inclusao de timezone e culture no perfil do usuario

HORAS TRABALHADAS: 4h

==========
07/06/2009
==========

- correcoes de bug com timezone e unicode

HORAS TRABALHADAS: 6h

==========
08/06/2009
==========

- exibicao de data / hora nos articles do dashboard com timezone e culture local

HORAS TRABALHADAS: 3h

==========
09/06/2009
==========

- correcao de exibicao de data local no queue
- correcao do algoritmo de ordenacao de feeds

HORAS TRABALHADAS: 4h

==========
10/06/2009
==========

- inclusao de ordenacao no queue (sortable)
- inclusao de publicacao automatica de queue
- inclusao de intervalo de tempo na publicacao automatica de queue
- definicao de publicacao automatica para novos itens adicionados ao queue, quando
  este esta no modo de publicacao automatica
- bugfixes

HORAS TRABALHADAS: 7h

==========
11/06/2009
==========

- inclusao de botao excluir item do queue
- bugfixes
- exibicao de conteudo de um item do queue
- inclusao de formulario para edicao de item do queue

HORAS TRABALHADAS: 5h

==========
12/06/2009
==========

- bugfixes
- inclusao de metodo para persistencia nas alteracoes de um item do queue
- integração com FCKEditor para edicao de item do queue 
- inclusão de seletor para territory, timezone e culture no editor de perfil

HORAS TRABALHADAS: 9h

==========
16/06/2009
==========

- inclusão de modulo para obter palavras chaves a partir de um html (htmlcrawler)

HORAS TRABALHADAS: 4h

==========
19/06/2009
==========

- inclusão de opção para cadastro de palavras-chave no blog
- remoção do campo "nome" durante o cadastro de blogs
- registro  palavras-chave no article
- inclusao de webservice para sugestao de entradas do queue baseada nos keywords

HORAS TRABALHADAS: 4h